# jwt-auth-service

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_28_1154-7d8679e38396_user_table.py  2026_03_30_1411-4fa6243dc1d8_change_user_table.py  2026_04_07_0224-f2b5324d546d_add_refresh_token.py  2026_04_07_0243-dd53264f05b3_add_utc_timezone.py
app/: .db.env.example  .env.example  config.py  main.py
app/api/v1/: __init__.py  auth.py
app/db/: __init__.py  database.py
app/models/: __init__.py  base.py  token.py  user.py
app/repositories/: __init__.py  auth_repository.py  refresh_token_repository.py
app/schemas/: __init__.py  auth_schemas.py  user_schemas.py
app/services/: __init__.py  auth_service.py  refresh_token_service.py
app/utils/: __init__.py  password_hash.py  token.py
deploy/: Dockerfile  docker-compose.yml
tests/: conftest.py  test_auth.py
tests/utils/: __init__.py  mock_user.py
